# BlurLevelFormat

./: .gitignore  .kateproject  BLFLib.sln  BLFLib.vcxproj  BLFLib.vcxproj.filters  CMakeLists.txt  Makefile  README.md  level.blf
include/: blf.hpp
include/blf/: bakedlist.hpp  blffile.hpp  commontable.hpp  datagroup.hpp  datatable.hpp  enums.hpp  foreignattributetable.hpp  foreignobject.hpp  header.hpp  informationheader.hpp  localobjecttable.hpp  namedobjectdata.hpp  objectattribute.hpp  objectdata.hpp  objectdefinition.hpp  objecttable.hpp  objecttype.hpp  reader.hpp  string.hpp  templatearrayconstiterator.hpp  templatecreator.hpp  templateobject.hpp  types.hpp  unbakedlist.hpp  version.hpp  writer.hpp
include/blf/exceptions/: outdatedreader.hpp
include/blf/file/: processedataiterator.hpp  reader.hpp
include/blf/io/: writer.hpp
include/blf/object/: attributelocation.hpp  attributeprocedure.hpp  classobjectattribute.hpp  foreignobjectdefinition.hpp  localobjectdefinition.hpp  (+3 more)
src/: BlurLevelFormat.cpp
src/blf/: blffile.cpp  commontable.cpp  commontablerecipe.cpp  datatable.cpp  enums.cpp  foreignattributetable.cpp  foreignobject.cpp  foreignobjectdefinition.cpp  objectattribute.cpp  objectdefinition.cpp  objecttable.cpp  reader.cpp  string.cpp  templatearrayconstiterator.cpp  writer.cpp
tests/: Makefile  blf_all_test.cpp  blf_foreign_defintion.cpp  blf_multi_nested_class.cpp  blf_simple_class_with_string.cpp  blf_simple_nested_class.cpp  blf_simple_objectreference.cpp  blf_string_test.cpp  blf_test_list.cpp  test.cpp  test.hpp  test_memory.hpp
(+9 files in other folders)
